--- a/Project-20/SOS/ORS/template/Footer.html
+++ b/Project-20/SOS/ORS/template/Footer.html
@@ -7,5 +7,5 @@
     left:0;
     width:100%;
 ">
-    © 2025 All rights reserved by Aditya Technologies
+    © 2025 All rights reserved by Rays Technologies
 </footer>
